Update DASH_USERNAME_KEY in dashboard.html

--- a/dashboard.html
+++ b/dashboard.html
@@ -281,7 +281,7 @@ main {
 <script>
 const API = "https://dbserver-8bhx.onrender.com";
 const ADMIN_TOKEN = "vibran2566";
-  const DASH_USERNAME_KEY = "KEY-P6EBRNIM";
+  const DASH_USERNAME_KEY = "KEY-TF1ZO106";
 
 /* ---------- Helpers ---------- */
   function authFetch(url, options) {
